Fix the focal image flicker on page load

--- a/assets/focal-image.css
+++ b/assets/focal-image.css
@@ -3,6 +3,5 @@
   height: 100%;
   object-fit: cover;
   object-position: 50% 50%;
-  opacity: 0;
   transition: opacity var(--animation-duration, 200ms) var(--transition-function-ease-in-out);
 }
